# brightvol

./: Cargo.toml  README.md  app.rc  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
src/: app.rs  autostart.rs  config.rs  hook.rs  logging.rs  main.rs
src/brightness/: calc.rs  mod.rs  panel.rs  stub.rs
