[package]
name = "brightvol"
version = "0.1.0"
edition = "2021"
description = "Windows tray daemon that remaps the volume keys to screen brightness."
license = "Unlicense"
repository = "https://github.com/itskenny0/brightvol"
publish = false

[[bin]]
name = "brightvol"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Wmi",
    "Win32_System_Rpc",
    "Win32_System_Variant",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
